Fixed CSS spacing issue found in Edge SEARCH-460

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -784,9 +784,8 @@ nav {
   position: relative; }
 
 .datastore-list {
-  display: inline-flex;
-  margin: 0 0.5rem;
-  margin: 0 3px; }
+  margin: 0;
+  display: inline; }
 
 .datastore-scroll-x {
   white-space: nowrap;
@@ -806,7 +805,8 @@ nav {
 .datastore-item {
   display: inline-block;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  vertical-align: bottom; }
 
 .datastore-button {
   display: inline-block;
